cocktail index and show

--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -1,2 +1,13 @@
-<h1>Cocktails#new</h1>
-<p>Find me in app/views/cocktails/new.html.erb</p>
+<div class="container">
+  <h1>Create a cocktail</h1>
+
+  <%= simple_form_for(@cocktail, html: { class: 'form-horizontal' }) do |f| %>
+    <%= f.error_notification %>
+    <%= f.input :name %>
+    <%= f.input :ingredients, collection: @ingredients, input_html: { class: 'multiselectuser', multiple: true} %>
+    <%= f.button :submit %>
+  <% end %>
+
+</div>
+
+
