--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,17 +1,18 @@
-<h1>See all cocktails</h1>
+<div class="container">
+  <h1>See all cocktails</h1>
+  <ul class="list-unstyled">
+    <% @cocktails.each do |cocktail| %>
+    <li>
+      <h2><%= link_to cocktail.name, cocktail_path(cocktail) %></h2>
+      <ul>
+        <% cocktail.ingredients.each do |ingredient| %>
+        <li>
+          <%= ingredient.name %>
+        </li>
+        <% end %>
+      </ul>
+    </li>
+    <% end %>
+  </ul>
+</div>
 
-
-<ul class="list-unstyled">
-  <% @cocktails.each do |cocktail| %>
-  <li>
-    <h2><%= cocktail.name %></h2>
-    <ul>
-      <%= cocktail.ingredients.each do |ingredient| %>
-      <li>
-        <%= ingredient.name %>
-      </li>
-      <% end %>
-    </ul>
-  </li>
-  <% end %>
-</ul>
