--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,5 +1,7 @@
 <div class="container">
   <h1><%= @cocktail.name %></h2>
+  <h2>Follow the doses</h2>
+
   <ul>
     <% @cocktail.doses.each do |dose| %>
     <li>
@@ -9,14 +11,13 @@
   </ul>
 </div>
 
-
 <div class="review-background">
   <div class="container padded" id="add_review">
     <h4>Add a new dose</h4>
     <%= simple_form_for([@cocktail, @dose], html: { class: 'form-horizontal' }) do |f| %>
       <%= f.error_notification %>
-      <%= f.input :description %>
       <%= f.input :ingredient, collection: @ingredients, prompt: "Choose the ingredient" %>
+      <%= f.input :description %>
       <%= f.button :submit %>
     <% end %>
   </div>
