--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,8 @@
 <div class="navbar-wagon">
   <!-- Logo -->
   <%= link_to root_path, class: "navbar-wagon-brand" do %>
-    <i class="fa fa-glass fa-2x" aria-hidden="true"></i>
+    <!-- <i class="fa fa-glass fa-2x" aria-hidden="true"></i> -->
+    <%= image_tag 'logo_cocktail.png' %>
   <% end %>
 
   <!-- Right Navigation -->
