--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,6 +1,20 @@
+<div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('http://lorempixel.com/900/900/food/');">
+  <div class="banner-content">
+    <h1><%= @cocktail.name %></h1>
+    <p>
+      <i class="fa fa-lemon-o" aria-hidden="true"></i>
+      <%= @cocktail.ingredients.count %> ingredient(s)
+    </p>
+    <p>
+      <i class="fa fa-list" aria-hidden="true"></i>
+      <%= @cocktail.doses.count %> dose(s)
+    </p>
+  </div>
+</div>
+
 <div class="container">
-  <h1><%= @cocktail.name %></h2>
-  <h2>Follow the doses</h2>
+  <h2><%= @cocktail.name %></h2>
+  <h3>Follow the doses:</h3>
 
   <ul>
     <% @cocktail.doses.each do |dose| %>
