--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -30,9 +30,19 @@
 <div class="review-background">
   <div class="container padded" id="add_review">
     <h4>Add a new dose</h4>
+    <% if @dose.errors.any? %>
+    <ul>
+      <% @dose.errors.full_messages.each do |message| %>
+      <li>
+        <%= message %>
+      </li>
+      <% end %>
+    </ul>
+    <% end %>
+
     <%= simple_form_for([@cocktail, @dose], html: { class: 'form-horizontal' }) do |f| %>
       <%= f.error_notification %>
-      <%= f.input :ingredient, collection: @ingredients, prompt: "Choose the ingredient" %>
+      <%= f.input :ingredient, collection: @ingredients, include_blank: false %>
       <%= f.input :description %>
       <%= f.button :submit %>
     <% end %>
