--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -4,6 +4,8 @@
   <%= simple_form_for(@cocktail, html: { class: 'form-horizontal' }) do |f| %>
     <%= f.error_notification %>
     <%= f.input :name %>
+    <%= f.input :photo %>
+    <%= f.input :photo_cache, as: :hidden %>
     <%= f.button :submit %>
   <% end %>
 
